...
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/spacing_md"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_track_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:textColor="?attr/colorOnSecondary"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tv_track_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/yp_track_subtitle"
            android:maxLines="1"
            android:ellipsize="end" />
...
